# VariousCodingExamples

./: .gitattributes  AUTHORS  C_ThreadDeath.cc  README.md  kbhit.c  lockout.c  main.cc  mkinstalldirs  solution  uudecode_dir.pl  x  xx.cc  xxx
Models/alignModel/: align.cc
Models/dependModel/: README
STGtest/: README
alignModel/: Makefile  README  alignModel
autoconf/hello_basic/: configure.in  my_automake
autoconf/hello_lib_depth1/: ChangeLog  Makefile  config.status
autoconf/run_free-2depth-mixed-code/: .run-free.hst  .run-free.tmp  Makefile.am
autotools_proj_template/: README
autotools_proj_template/src/: Makefile.am  Makefile.in
autotools_proj_template/src/sockets/: Makefile.am  class_TCPServer.h  class_UDPClient.C
c++/alignModel/: mkalign.cc  mkalign.h  mystructs.h
c++/class-pointer/: Makefile.in  configure  configure.in
c++/cpp_templates/: main.C
c++/ktimers/: Makefile
c++/templates/: Makefile
c++/threadQueue/: README  (+3 more)
dependModel/: main.c  x.c
expecttest/: Makefile.am  Makefile.in  configure  configure.in  mkinstalldirs  my_automake
expecttest/include/: Makefile.am
expecttest/scripts/: Makefile.am  expect_script  expect_script2  expect_script3  startup.screen  startup.test
expecttest/src/test/: Makefile.am  Makefile.in  test1.cc  test3.cc
framework/: ChangeLog
gtk/: gnome-run.c
include/: Makefile.am
ktimers/: AUTHORS  Makefile.in  README  config.cache  config.status
lib/: Makefile.am  Makefile.in  console.c
msql-msgq/: Makefile.am  Makefile.in  configure.in  my_automake
msql-msgq/data/: DNIS.txt  LineCard.txt  MediaGateway.txt  Span.txt  SpeechServer.txt  SubRack.txt  TrunkGroup.txt  VSSApplication.txt  call_event.txt  call_status.txt  cdr.txt
msql-msgq/include/: CDRWrapper.h  CallDirectorCache.h  CallDirectorCacheDefs.h  Makefile  Makefile.am  Makefile.in  MySQLWrapper.h  QueueWrapper.h  config.h
msql-msgq/lib/: ConfigWrapper.cc  Makefile.am  QueueWrapper.cc
msql-msgq/schema/: Makefile.am  Makefile.in  cdr.sql  config.sql
msql-msgq/src/cdwraptest/: Makefile.am  Makefile.in  cdrwrap.cc  configwrap.cc
msql-msgq/src/producer/: Makefile.in
msql-msgq/src/testC/: Makefile.am  Makefile.in
msql-msgq/src/testCC/: Makefile.in
perlx/: bkgd
proj-template/: AUTHORS  configure.in
proj-template/include/: Makefile.in  config.h.in
proj-template/src/: Makefile.am
proj-template/src/project-c++/: Makefile.in  main.C
proj-template/template-doc/: QUICKSTART  README
svgalib/: svgatest.c
threadDeath2/: debug.h
threadQueue/: configure  configure.in
timers/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.in
timers/.snprj/: timers-0.0.1.f  timers-0.0.1.fu  timers-0.0.1.gv  timers-0.0.1.icl  timers-0.0.1.iv  timers-0.0.1.ma  timers-0.0.1.mi  timers-0.0.1.to
timers/src/: Makefile.in
timers/src/timers/: Makefile.am  Makefile.in  Timer.h  mThread.cc  mThread.h  timertest.cc
timers/src/timers1/: Makefile.am  Makefile.in  Timer.cc  Timer.h  mThread.cc  mThread.h
timers/src/timers2/: Makefile.am  Makefile.in  mytimers.cc  mytimers.h  timers2.proj  timertest.cc
timers/src/timers2/.snprj/: timers2.by  timers2.cl  timers2.f  timers2.fil  timers2.fu  timers2.gv  timers2.iv  timers2.ma  timers2.md  timers2.mi  timers2.to  tmp_GX8GFu  tmp_WEKxYF
timers/src/timers3/: Makefile.am  Makefile.in  hardware_timer.h  mytimers.h
ttycontrol/: lockout2.c
unhex/: y
(+231 files in other folders)
