AC_INIT(src)
AM_INIT_AUTOMAKE(timers,0.0.1)
AM_CONFIG_HEADER(include/config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
##
echo "blah, blah, blah"
echo "this is a subliminal message...."
##
AC_PROG_INSTALL
AC_OUTPUT(Makefile \
src/Makefile \

src/timers/Makefile \
src/timers1/Makefile \
src/timers2/Makefile \
src/timers3/Makefile \

lib/Makefile \

bin/Makefile \
include/Makefile ) 
##
##
##
echo ""
echo "--- Now run make, binaries will be in ./bin ---"
echo ""
